# sequence-labeling

./: .gitignore  README.md  bento_docker_build.sh  bento_pack.sh  bento_serve.sh  data.dvc  pyproject.toml  requirements.txt
.dvc/: .gitignore  config
app/: labeling.py  train.py
app/bento_deploy/: bento_packer.py  bento_service.py  requirements.txt
app/utils/: color.py  converters.py  labeling.py
notebooks/: bentofile.yaml  corus_bsnlp_load.ipynb  fix_entity_aggregation.ipynb  ner_model_train.ipynb  ner_model_train_step1_conll.ipynb  ner_model_train_step2_Full.ipynb  ner_model_train_step2_ontonotes.ipynb  ner_model_train_step3_Full.ipynb  ner_pipeline.ipynb  ner_predict.ipynb  wnut_dataset_ner_model_train.ipynb
notebooks/papermill_results/: ner_model_train_step2_Full_ontonotes_e24.ipynb  ner_model_train_step2_ontonotes.ipynb  ner_model_train_step2_saved_24epoch.ipynb  ner_model_train_step3_wnut.ipynb
