[tool.poetry]
name = "sequence-labeling"
version = "0.1.0"
description = "sequence labeling model and bento service"
authors = ["Vadim <artifex.i@gmail.com>"]
readme = "README.md"
# packages = [{include = "sequence_labeling"}]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.22.2"
torch = [
	{ version = "^1.12.1", platform = "win32" },
	{ version = "^1.12.1+cu113", source = "pytorch", platform = "linux" },
]
bentoml = "^1.0.7"
sentencepiece = "^0.1.97"
protobuf = "3.20.1"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu113"
secondary = true
default = false

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.4.8"
ipywidgets = "^8.0.2"
jupyterlab-unfold = "^0.2.2"
datasets = "^2.5.2"
evaluate = "^0.2.2"
seqeval = "^1.2.2"
papermill = "^2.4.0"
neptune-client = "^0.16.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
